--- a/UnacademySprint2/pom.xml
+++ b/UnacademySprint2/pom.xml
@@ -123,6 +123,13 @@
     <artifactId>cucumber-testng</artifactId>
     <version>7.2.3</version>
 </dependency>
+		
+		<dependency>
+  <groupId>org.testng</groupId>
+  <artifactId>testng</artifactId>
+  <version>6.8</version>
+  <scope>test</scope>
+</dependency>
 
 	</dependencies>
 </project>
